[build-system]
requires = ["setuptools>=45.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udev_tools"
version = "0.1.0"
dependencies = [
    "udev_tools@git+https://github.com/JosefGst/udev_tools",
    "pyudev",
]

description = "Tools to easily create udev rools for your USB devices."
readme = "README.md"
authors = [{ name = "Tin & Josef", email = "info@realpython.com" }]

[project.scripts]
get_udev = "udev_tools.get_udev:main"