[build-system]
requires = ["setuptools>=45.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udev_tools"
version = "0.1.0"
install_requires=["pyudev"],

description = "Tools to easily create udev rools for your USB devices."
readme = "README.md"
authors = [{ name = "Tin & Josef", email = "info@realpython.com" }]

[project.scripts]
get_udev = "udev_tools.get_udev:main"